# notes-management-api

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  manager.py  model.py  pyproject.toml  requirements.txt  schemas.py
frontend/templates/: index.html
legacy/: manager.py
src/api/v1/: router.py
src/api/v1/endpoints/: __init__.py  notes.py
src/core/: database.py
src/models/: note.py
src/schemas/: note.py
src/services/: ai_service.py  note_service.py
template/: home.html
