[project]
name = "notes-management-api"
version = "0.1.0"
description = "A lightweight Notes Management API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]>=0.129.0",
  "sqlmodel>=0.0.34",
  "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
  "isort>=7.0.0",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "ruff>=0.15.1",
]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []
